--- a/Advantage.ipynb
+++ b/Advantage.ipynb
@@ -4,55 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# What type of player are you?\n",
-    "\n",
-    "<insert pic here>\n",
-    "    \n",
-    "Well, honestly, I don't care. And you should not care either, because we play DnD to have fun, and people can have fun by both calculating every action to maximize the damage output and just throwing a bunch of dice at the source of problems.\n",
-    "\n",
-    "## What is this article about?\n",
-    "\n",
-    "It is mostly about combat and your efficiency as a character in combat. It also points at some major game balance issues, but this part will come online later.\n",
-    "\n",
-    "## Why should I read this?\n",
-    "\n",
-    "If you're a DM and you have to considered throwing at players some evil genius or just very exeperienced combatant, consider that he (or she) will most probably act in the most efficient way possible. Also this will help you analyze the upcoming battle and make some important decisions."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# First and foremost\n",
-    "\n",
-    "Let's give you small excursus into discrete probability theory. There are *events* that have *probabilities*. We will mostly talk about *independant events*, which do not affect each other, such as two consequent dice rolls. In our case, *event* is a value that you rolled on your dice. For example, probability of rolling **20** on a d20 equals to $1/20 = 0.05$. *Mathematical expectation* or *mean* is actually the mean value that you will get while rolling your dice and is defined by following formula:\n",
-    "$$ E(a) = \\sum j \\cdot p(j)\\text{,}$$\n",
-    "where $E(a)$ is expectation, $j$ is value rolled and $p(j)$ is probability of rolling corresponding value. Thus, for an abstract d**N** dice expectation value is:\n",
-    "\n",
-    "$$ E(dN) = \\sum_{j=1}^N j \\cdot p(j) = \\left(\\sum_{j=1}^N j \\right) \\cdot \\frac{1}{N} = \\frac{(N \\cdot (N+1))}{2\\cdot N} = \\frac{N+1}{2}$$\n",
-    "\n",
-    "There's also one very important value --- *deviation*, which defines, how consistent our rolls will be:\n",
-    "\n",
-    "$$ D(a) = E((a-E(a))^2) = E(a^2) - E(a)^2 $$\n",
-    "\n",
-    "Again, I will calculate it for an abstract d**N**:\n",
-    "\n",
-    "\\begin{gather*}\n",
-    "    E(a^2) = \\sum_{j=1}^N j^2 \\cdot p(j) = \\left(\\sum_{j=1}^N j^2\\right) \\cdot \\frac{1}{N} = \\frac{N\\cdot(N+1)\\cdot(2N+1)}{6\\cdot N} = \\frac{(N+1)\\cdot(2N+1)}{6}\\\\\n",
-    "    E(a)^2 = \\left(\\frac{N+1}{2}\\right)^2\\\\\n",
-    "    D(a) = E(a^2) - E(a)^2 = \\frac{(n^2-1)}{12}\n",
-    "\\end{gather*}\n",
-    "\n",
-    "### Thus, for d20 expectation equals to $10.5$ and deviation equals to $33.25$.\n",
-    "\n",
-    "All this formulas will be useful later. Let's get started."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Advantage and Disadvantage\n",
+    "# Advantage and Disadvantage\n",
     "When you have advantage, you roll two d20 and choose the highest. Disadvantage is same, but you choose the lowest.\n",
     "Let's write some code and calculate expectation and deviation:"
    ]
