--- a/_sources/advantage.ipynb
+++ b/_sources/advantage.ipynb
@@ -4,9 +4,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "tags": [
-     "remove-cell"
-    ]
+    "tags": []
    },
    "outputs": [],
    "source": [
@@ -23,7 +21,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Advantage and Disadvantage\n",
+    "# Advantages of Advantage \n",
     "When you have advantage, you roll two d20 and choose the highest. Disadvantage is same, but you choose the lowest.\n",
     "Let's write some code and calculate expectation and deviation:"
    ]
