--- a/_sources/math.ipynb
+++ b/_sources/math.ipynb
@@ -6,7 +6,7 @@
     "tags": []
    },
    "source": [
-    "# First and foremost\n",
+    "# Math Basics\n",
     "\n",
     "Let's give you small excursus into discrete probability theory. There are *events* that have *probabilities*. We will mostly talk about *independant events*, which do not affect each other, such as two consequent dice rolls. In our case, *event* is a value that you rolled on your dice. For example, probability of rolling $20$ on a d20 equals to $1/20 = 0.05$. \n",
     "\n",
