Some features of jupyter-book used in math chapter

--- a/advantage.ipynb
+++ b/advantage.ipynb
@@ -4,7 +4,9 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "tags": []
+    "tags": [
+     "remove-input"
+    ]
    },
    "outputs": [],
    "source": [
@@ -67,8 +69,8 @@
       "Advantage expectation:    13.825\n",
       "Disadvantage expectation: 7.175\n",
       "\n",
-      "Advantage deviation:      22.194375\n",
-      "Disadvantage deviation:   22.194375\n",
+      "Advantage variance:       22.194375\n",
+      "Disadvantage variance:    22.194375\n",
       "\n"
      ]
     }
@@ -78,8 +80,8 @@
     "Advantage expectation:    {outcomes['advantage'].mean()}\n",
     "Disadvantage expectation: {outcomes['disadvantage'].mean()}\n",
     "\n",
-    "Advantage deviation:      {outcomes['advantage'].var()}\n",
-    "Disadvantage deviation:   {outcomes['disadvantage'].var()}\n",
+    "Advantage variance:       {outcomes['advantage'].var()}\n",
+    "Disadvantage variance:    {outcomes['disadvantage'].var()}\n",
     "''')"
    ]
   },
@@ -87,15 +89,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As it can be seen, advantage adds $3.325$ to the mean and disadvantage subtracts the same value, while both of their deviations are lowered by somewhat around $11$, which means improved consistency of throws (if you don't know to what values I'm talking, be sure to check the [Math](./Math.ipynb) section)."
+    "As it can be seen, advantage adds $3.325$ to the mean and disadvantage subtracts the same value, while both of their deviations are lowered by somewhat around $11$, which means improved consistency of throws (if you don't know to what values I'm talking, be sure to check the [math](./math.ipynb) section)."
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "tags": []
+   },
    "source": [
-    "## Ability checks and saving throws: Alas, poor advantage!\n",
+    "## Ability checks and saving throws: Alas, poor advantage!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
+   "source": [
     "### Advantage versus +3 bonus: fight!\n",
+    "\n",
     "As we have just seen, advantage must be strictly better than a +$3$ bonus, because it's more consistent (bare bonus has same deviation as usual roll, $33.25$) and it's mean value is higher than that of bare +$3$ bonus, which will be equal to $13.5$. But is it really *better* in all situations? Let's find out.\n",
     "\n",
     "Here's the graphic that shows probability to succeed on a check while having either +$3$ bonus to it or an advantage."
@@ -188,7 +202,10 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true,
+    "tags": []
+   },
    "source": [
     "### New contenders: resistance & guidance!\n",
     "Disclaimer: I will not write resistance & guidance every time. Instead, I will call it *residence*. No explanation provided.\n",
@@ -294,7 +311,15 @@
     "tags": []
    },
    "source": [
-    "## Attacks: from zero to hero!\n",
+    "## Attacks: from zero to hero!"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Advantage versus +3 bonus: another round\n",
+    "\n",
     "Advantage may make poor impression when talking about ability checks and saving throws. But in terms of attacking it really shines. It happens mostly because of crit on the roll of $20$ and guaranteed miss on the roll of $1$. Let's put advantage back on it's pedestal!\n",
     "\n",
     "First, let's compare **chances to hit** an enemy while having advantage and +$3$ bonus to the attack:"
@@ -592,7 +617,7 @@
      "text": [
       "\n",
       "Advantage expectation:    15.4875\n",
-      "Advantage deviation:      14.95834375\n",
+      "Advantage variance:       14.95834375\n",
       "\n"
      ]
     }
@@ -600,7 +625,7 @@
    "source": [
     "print(f'''\n",
     "Advantage expectation:    {outcomes['elven'].mean()}\n",
-    "Advantage deviation:      {outcomes['elven'].var()}\n",
+    "Advantage variance:       {outcomes['elven'].var()}\n",
     "''')"
    ]
   },
