--- a/math.ipynb
+++ b/math.ipynb
@@ -8,31 +8,68 @@
    "source": [
     "# Math Basics\n",
     "\n",
-    "Let's give you small excursus into discrete probability theory. There are *events* that have *probabilities*. We will mostly talk about *independant events*, which do not affect each other, such as two consequent dice rolls. In our case, *event* is a value that you rolled on your dice. For example, probability of rolling $20$ on a d20 equals to $1/20 = 0.05$. \n",
+    "This section can be skipped at any moment if you feel bored, however, it is probably important to understand other topics to their fullest.\n",
     "\n",
-    "*Mathematical expectation* or *mean* is actually the mean value that you will get while rolling your dice and is defined by following formula:\n",
+    "Let's give you small excursion into discrete probability theory. There are *events* that have *probabilities*. We will mostly talk about *independant events*, which do not affect each other, such as two consequent dice rolls. In our case, *event* is a value that you rolled on your dice. For example, probability of rolling $20$ on a d20 equals to $1/20 = 0.05$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Expectation \n",
+    "\n",
+    "*Expectation* is actually the mean value that you will get while rolling your dice and is defined by following formula:\n",
     "\n",
     "$$ E(a) = \\sum j \\cdot p(j)\\text{,}$$\n",
     "\n",
-    "where $E(a)$ is expectation, $j$ is value rolled and $p(j)$ is probability of rolling corresponding value. Thus, for an abstract d**N** dice expectation value is:\n",
+    "where $E(a)$ is expectation, $j$ is value and $p(j)$ is probability of rolling corresponding value.\n",
+    "\n",
+    "To grasp the idea behind *expectation* you can imagine, that we make **a lot** of dice rolls and take their mean value. It is most likely to be very close to the *expectation*. That means, that bigger *expectation* gives better results in a long run."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "```{dropdown} Example\n",
+    "Let's calculate an expectation of a single roll of an N-sided die, a.k.a. d**N**:\n",
     "\n",
     "$$ E(dN) = \\sum_{j=1}^N j \\cdot p(j) = \\left(\\sum_{j=1}^N j \\right) \\cdot \\frac{1}{N} = \\frac{(N \\cdot (N+1))}{2\\cdot N} = \\frac{N+1}{2}$$\n",
-    "\n",
-    "There's also one very important value --- *variation*, which defines, how consistent our rolls will be:\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Variance\n",
+    "There's also one very important value — *variance*, which defines, how consistent the random event would be and is calculated by the following formula:\n",
     "\n",
     "$$ Var(a) = E((a-E(a))^2) = E(a^2) - E(a)^2 $$\n",
     "\n",
-    "Again, I will calculate it for an abstract d**N**:\n",
+    "The idea behind *variance* is pretty straightforward — the bigger it is, the more inconsistent our random value becomes. For example, constant value has a variance of $0$, and d100 has a variance of $833,25$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "tags": []
+   },
+   "source": [
+    "```{dropdown} Example\n",
+    "Again, I will calculate *variance* of a single roll of an N-sided dice, a.k.a. d**N**:\n",
     "\n",
     "\\begin{gather*}\n",
     "    E(a^2) = \\sum_{j=1}^N j^2 \\cdot p(j) = \\left(\\sum_{j=1}^N j^2\\right) \\cdot \\frac{1}{N} = \\frac{N\\cdot(N+1)\\cdot(2N+1)}{6\\cdot N} = \\frac{(N+1)\\cdot(2N+1)}{6}\\\\\n",
     "    E(a)^2 = \\left(\\frac{N+1}{2}\\right)^2\\\\\n",
-    "    Var(a) = E(a^2) - E(a)^2 = \\frac{(n^2-1)}{12}\n",
+    "    Var(a) = E(a^2) - E(a)^2 = \\frac{(N^2-1)}{12}\n",
     "\\end{gather*}\n",
     "\n",
     "Thus, for d20 expectation equals to $10.5$ and deviation equals to $33.25$.\n",
     "\n",
-    "All this formulas will be useful later. Let's get started."
+    "All this formulas will be useful later. Let's get started.\n",
+    "```"
    ]
   }
  ],
