Small typo fixes in advantage chapter and config updated to show repo link

--- a/advantage.ipynb
+++ b/advantage.ipynb
@@ -104,7 +104,6 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -197,13 +196,14 @@
    "source": [
     "Сounterintuitively, in *some* cases constant bonus is better than advantage. It can be seen that when Difficulty Class is bigger or equal to $18$, constant bonus is strictly better in terms of probability.\n",
     "\n",
-    "It happens because when rolling with advantage, but without any bonuses, you just *can't* get any value that exceeds $20$, but with bare bonus the result can be up to $23$, which results in bare bonus being better against high DC."
+    "It happens because when rolling with advantage, but without any bonuses, you just *can't* get any value that exceeds $20$, but with bare bonus the result can be up to $23$, which results in bare bonus being better against high DC.\n",
+    "\n",
+    "Also, with a bare bonus there's a $100\\%$ probability to pass the DC when it is below $5$, because minimal outcome of a roll with +$3$ is a $4$, but roll with advantage still has a small probability to fail even on the smallest DCs."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {
-    "jp-MarkdownHeadingCollapsed": true,
     "tags": []
    },
    "source": [
@@ -268,7 +268,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We were almost right, in **most** cases, *residence* is slightly inferior than +$3$ bonus, and it behaves in almost the same way - it overcomes advantage on some AC values. But if you're perceptive enough, you can see, that in the very end of the graphic *bless* overcomes +$3$ bonus. It happens, when DC is equal to $24$:"
+    "We were almost right, in **most** cases, *residence* is slightly inferior than +$3$ bonus, and it behaves in almost the same way - it overcomes advantage on some AC values. But if you're perceptive enough, you can see, that in the very end of the graphic *residence* overcomes +$3$ bonus. It happens, when DC is equal to $24$:"
    ]
   },
   {
@@ -585,7 +585,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*Bless* overcomes advantage on AC of $20$ and bare +$3$ bonus on AC of $23$, but in other cases it's strictly inferior."
+    "*Bless* overcomes advantage on AC of $20$ and bare +$3$ bonus on AC of $24$, but in other cases it's strictly inferior. Reasoning is quite similar to that of *residence*."
    ]
   },
   {
